Parte 1-6 del proyecto (corregir)